--- a/templates/dojo_survey.html
+++ b/templates/dojo_survey.html
@@ -17,7 +17,9 @@
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
                             {% for message in messages %}
+                                {%if "Name" in message %}
                                 <p style=color:red>{{message}}</p>
+                                {% endif %}
                             {% endfor %}
                         {% endif %}
                     {% endwith %}
@@ -48,7 +50,9 @@
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
                             {% for message in messages %}
+                                {% if "Comment" in message %}
                                 <p style=color:red>{{message}}</p>
+                                {% endif %}
                             {% endfor %}
                         {% endif %}
                     {% endwith %}
