--- a/templates/dojo_survey.html
+++ b/templates/dojo_survey.html
@@ -14,6 +14,7 @@
             <form action='/result' method='post'>
                 <div class="form-group">
                     <label for="formName">Your Name:</label>
+                    <!-- Get flash messages, check if contains anything, iterate through each, if a message contains "Name" we print" -->
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
                             {% for message in messages %}
@@ -46,7 +47,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="commentForm">Comment (optional):</label>
+                    <label for="commentForm">Comment:</label>
+                    <!-- Get flash messages, check if contains anything, iterate through each, if a message contains "Comment we print" -->
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
                             {% for message in messages %}
