--- a/templates/dojo_survey.html
+++ b/templates/dojo_survey.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Dojo Survey with Validation</title>
         <!-- linking a css style sheet -->
